--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
+    "react-spring": "^8.0.27",
     "tailwindcss": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build:style":"postcss src/styles/index.css -o src/styles/tailwind.css",
+    "build:style": "postcss src/styles/index.css -o src/styles/tailwind.css",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
