--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postcss-cli": "^6.1.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-pose": "^4.0.10",
     "react-scripts": "3.2.0",
     "react-spring": "^8.0.27",
     "tailwindcss": "^1.1.3"
